# byte-calci

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: pages.yml
src/: ast.rs  bytecode.rs  codegen.rs  disassembler.rs  gc.rs  gui.rs  lib.rs  main.rs  memory.rs  parser.rs  tokenizer.rs  vm.rs
